--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0"
-  }
+  },
+  "engines": {
+  "node": "18.x"
+}
 }
